IHAKI-13 Completed datatable integration with AJAX for. Implemented entity editing and deletion systems. Added live statistics to the dashboard.

--- a/static/metronic/global/css/plugins-md.css
+++ b/static/metronic/global/css/plugins-md.css
@@ -1230,7 +1230,7 @@ Extended pagination
   display: inline-block;
   float: none !important;
   padding: 0 !important;
-  margin: 0 !important;
+  margin: 5px !important;
   position: static !important;
 }
 
