--- a/static/metronic/views/customer/list.html
+++ b/static/metronic/views/customer/list.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="portlet-body">
 				<div class="table-container">
-					<table class="table table-striped table-bordered table-hover" id="datatable_ajax">
+					<table class="table table-striped table-bordered table-hover" id="datatable_ajax3">
 						<thead>
 							<tr role="row" class="heading">
 								<th width="2%">
@@ -40,9 +40,6 @@
 									Kayıt&nbsp;#
 								</th>
 								<th width="15%">
-									Tarih
-								</th>
-								<th width="15%">
 									Müşteri
 								</th>
 								<th width="10%">
@@ -50,15 +47,6 @@
 								</th>
 								<th width="10%">
 									Fiyat
-								</th>
-								<th width="10%">
-									Miktar
-								</th>
-								<th width="10%">
-									Durum
-								</th>
-								<th width="10%">
-									Aksiyon
 								</th>
 							</tr>
 							<tr role="row" class="filter">
@@ -82,31 +70,18 @@
 									</div>
 								</td>
 								<td>
-									<input type="text" class="form-control form-filter input-sm" name="order_customer_name">
-								</td>
-								<td>
-									<input type="text" class="form-control form-filter input-sm" name="order_ship_to">
-								</td>
-								<td>
-									<div class="margin-bottom-5">
-										<input type="text" class="form-control form-filter input-sm" name="order_price_from" placeholder="From"/>
+									<div class="input-group date date-picker margin-bottom-5" data-date-format="dd/mm/yyyy">
+										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_from" placeholder="Başlangıç">
+										<span class="input-group-btn">
+										<button class="btn btn-sm default" type="button"><i class="fa fa-calendar"></i></button>
+										</span>
 									</div>
-									<input type="text" class="form-control form-filter input-sm" name="order_price_to" placeholder="To"/>
-								</td>
-								<td>
-									<div class="margin-bottom-5">
-										<input type="text" class="form-control form-filter input-sm margin-bottom-5 clearfix" name="order_quantity_from" placeholder="From"/>
+									<div class="input-group date date-picker" data-date-format="dd/mm/yyyy">
+										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_to" placeholder="Bitiş">
+										<span class="input-group-btn">
+										<button class="btn btn-sm default" type="button"><i class="fa fa-calendar"></i></button>
+										</span>
 									</div>
-									<input type="text" class="form-control form-filter input-sm" name="order_quantity_to" placeholder="To"/>
-								</td>
-								<td>
-									<select name="order_status" class="form-control form-filter input-sm">
-										<option value="">Select...</option>
-										<option value="pending">Pending</option>
-										<option value="closed">Closed</option>
-										<option value="hold">On Hold</option>
-										<option value="fraud">Fraud</option>
-									</select>
 								</td>
 								<td>
 									<div class="margin-bottom-5">
@@ -129,6 +104,6 @@
 <!-- END MAIN CONTENT -->
 <!-- BEGIN MAIN JS -->
 <script>
-	TableAjax.init();
+	CustomerTable.init();
 </script>
 <!-- END MAIN JS -->
