--- a/static/metronic/views/dashboard.html
+++ b/static/metronic/views/dashboard.html
@@ -38,8 +38,8 @@
                     <i class="fa fa-comments"></i>
                 </div>
                 <div class="details">
-                    <div class="number">
-                        1349
+                    <div class="number" id="totalUav">
+                        0
                     </div>
                     <div class="desc">
                         Kayıtlı İHA Sayısı
@@ -56,8 +56,8 @@
                     <i class="fa fa-bar-chart-o"></i>
                 </div>
                 <div class="details">
-                    <div class="number">
-                        1349
+                    <div class="number" id="nowLeasedUav">
+                        0
                     </div>
                     <div class="desc">
                         Anlık Kiralı İHA Sayısı
@@ -74,8 +74,8 @@
                     <i class="fa fa-shopping-cart"></i>
                 </div>
                 <div class="details">
-                    <div class="number">
-                        549
+                    <div class="number" id="totalCustomer">
+                        0
                     </div>
                     <div class="desc">
                         Müşteri Sayısı
@@ -92,8 +92,8 @@
                     <i class="fa fa-globe"></i>
                 </div>
                 <div class="details">
-                    <div class="number">
-                        89%
+                    <div class="number" id="leaseRatio">
+                        0%
                     </div>
                     <div class="desc">
                         Aylık Ortalama İHA Kira Oranı
@@ -107,9 +107,3 @@
     </div>
 </div>
 <!-- END MAIN CONTENT -->
-<!-- BEGIN MAIN JS & CSS -->
-<script>
-    Index.init();
-    Tasks.initDashboardWidget();
-</script>
-<!-- BEGIN MAIN JS & CSS -->
