--- a/static/metronic/views/uav/add.html
+++ b/static/metronic/views/uav/add.html
@@ -39,21 +39,22 @@
             </div>
             <div class="portlet-body form">
                 <!-- BEGIN FORM-->
-                <form action="#" id="form-username" class="form-horizontal form-bordered">
+                <form method="POST" id="form-username" class="form-horizontal form-bordered" ng-submit="submitForm()">
                     <div class="form-body">
                         <div class="form-group">
                             <label class="control-label col-md-3">İHA Kategori</label>
                             <div class="col-md-4">
-                                <div class="input-icon right">
-                                    <input type="text" class="form-control" name="category" id="category" placeholder="Kategori">
-                                </div>
+                                <select class="form-control" required="required" name="category" id="category" ng-model="formData.category">
+                                    <option value="" selected disabled>Kategori Seçin</option>
+                                </select>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-md-3">İHA İsmi</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="name" id="name" placeholder="İsim">
+                                    <input type="text" required="required" class="form-control" name="name" id="name"
+                                           placeholder="İsim" ng-model="formData.name">
                                 </div>
                                 <div class="help-block">
                                     İHA isminin benzersiz olması gerekmektedir.
@@ -64,7 +65,8 @@
                             <label class="control-label col-md-3">İHA Kod Adı</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="code" id="code" placeholder="Kod Adı">
+                                    <input type="text" class="form-control" required="required" name="code" id="code"
+                                           placeholder="Kod Adı" ng-model="formData.code">
                                 </div>
                             </div>
                         </div>
@@ -72,7 +74,9 @@
                             <label class="control-label col-md-3">İHA Envanter Numarası</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="stocknumber" id="stocknumber" placeholder="Stok Kodu">
+                                    <input type="text" required="required" class="form-control" name="stocknumber"
+                                           id="stocknumber"
+                                           placeholder="Stok Kodu" ng-model="formData.stock">
                                 </div>
                             </div>
                         </div>
@@ -80,7 +84,8 @@
                             <label class="control-label col-md-3">Marka</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="brand" id="brand" placeholder="Marka" value="BAYKAR" disabled>
+                                    <input type="text" class="form-control" name="brand" id="brand" placeholder="BAYKAR"
+                                           value="BAYKAR" disabled ng-model="formData.brand">
                                 </div>
                                 <div class="help-block">
                                     Yalnızca BAYKAR markası altındaki İHA'lar için kayıt ekleyebilirsiniz.
@@ -91,7 +96,8 @@
                             <label class="control-label col-md-3">Model</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="mode" id="model" placeholder="Model">
+                                    <input type="text" required="required" class="form-control" name="mode" id="model"
+                                           placeholder="Model" ng-model="formData.model">
                                 </div>
                             </div>
                         </div>
@@ -99,7 +105,8 @@
                             <label class="control-label col-md-3">Ağırlık</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="number" class="form-control" name="weight" id="weight" placeholder="Ağırlık">
+                                    <input type="number" class="form-control" name="weight" id="weight"
+                                           required="required" placeholder="Ağırlık" ng-model="formData.weight">
                                 </div>
                             </div>
                         </div>
@@ -107,7 +114,9 @@
                             <label class="control-label col-md-3">Azami Kalkış Ağırlığı</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="number" class="form-control" name="username1" id="username1_input" placeholder="Azami Kalkış">
+                                    <input type="number" class="form-control" name="username1" id="username1_input"
+                                           required="required" placeholder="Azami Kalkış"
+                                           ng-model="formData.takeoff_weight">
                                 </div>
                             </div>
                         </div>
@@ -115,16 +124,9 @@
                             <label class="control-label col-md-3">Uçuş Menzili</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="number" class="form-control" name="range" id="range" placeholder="Uçuş Menzili">
+                                    <input type="number" class="form-control" name="range" id="flight_range"
+                                           placeholder="Uçuş Menzili" ng-model="formData.flight_range">
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3">İHA Kira Durumu</label>
-                            <div class="col-md-9">
-                                <input type="checkbox" checked class="make-switch" data-size="normal">
-								<span class="help-block">
-								Bu İHA'nın kiralanabilme ayarı. </span>
                             </div>
                         </div>
                     </div>
