--- a/templates/aero_lease_app.html
+++ b/templates/aero_lease_app.html
@@ -20,7 +20,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
-    <title data-ng-bind="'Metronic AngularJS | ' + $state.current.data.pageTitle"></title>
+    <title data-ng-bind="'İHA Kiralama | ' + $state.current.data.pageTitle"></title>
 
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -95,7 +95,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <div class="container">
     <div class="page-container">
         <!-- BEGIN SIDEBAR -->
-        <div data-ng-include="'{% static 'metronic/tpl/sidebar.html' %}'" data-ng-controller="SidebarController"
+        <div data-ng-include="'{% static 'metronic/tpl/sidebar_lease.html' %}'" data-ng-controller="SidebarController"
              class="page-sidebar-wrapper">
         </div>
         <!-- END SIDEBAR -->
