--- a/static/metronic/global/css/plugins.css
+++ b/static/metronic/global/css/plugins.css
@@ -1112,7 +1112,7 @@ Extended pagination
   display: inline-block;
   float: none !important;
   padding: 0 !important;
-  margin: 0 !important;
+  margin: 5px !important;
   position: static !important;
 }
 
