--- a/static/metronic/views/category/update.html
+++ b/static/metronic/views/category/update.html
@@ -39,41 +39,33 @@
             </div>
             <div class="portlet-body form">
                 <!-- BEGIN FORM-->
-                <form action="#" id="form-username" class="form-horizontal form-bordered">
+                <form action="#" id="form-category" class="form-horizontal form-bordered">
                     <div class="form-body">
                         <div class="form-group">
                             <label class="control-label col-md-3">Kategori İsmi</label>
                             <div class="col-md-4">
                                 <div class="input-icon right">
-                                    <input type="text" class="form-control" name="username1" id="username1_input" placeholder="İsim">
+                                    <input type="text" class="form-control" name="name" id="name_input" placeholder="İsim">
                                 </div>
                                 <div class="help-block">
                                     Kategori isminin benzersiz olması gerekmektedir.
                                 </div>
                             </div>
                         </div>
-						<div class="form-group">
-							<label class="control-label col-md-3">Kategori Açıklama</label>
-							<div class="col-md-9">
-								<textarea id="maxlength_textarea" class="form-control" maxlength="500" rows="2" placeholder="Açıklama"></textarea>
-								<span class="help-block">
-								Kategoriniz hakkında 500 karaktere kadar açıklamayı buraya girebilirsiniz. </span>
-							</div>
-						</div>
                         <div class="form-group">
-                            <label class="control-label col-md-3">Kategori Kiralaması Durumu</label>
+                            <label class="control-label col-md-3">Kategori Açıklama</label>
                             <div class="col-md-9">
-                                <input type="checkbox" checked class="make-switch" data-size="normal">
-								<span class="help-block">
-								Bu kategori altındaki İHA'ların kiralama aktiflik seçeneği. </span>
+                                <textarea id="description_input" class="form-control" maxlength="500" rows="2" placeholder="Açıklama"></textarea>
+                                <span class="help-block">
+                                Kategoriniz hakkında 500 karaktere kadar açıklamayı buraya girebilirsiniz. </span>
                             </div>
                         </div>
                     </div>
                     <div class="form-actions">
                         <div class="row">
                             <div class="col-md-offset-3 col-md-9">
-                                <button type="submit" class="btn blue"><i class="fa fa-check"></i> Güncelle</button>
-                                <button type="button" class="btn default">Sil</button>
+                                <button type="submit" class="btn blue" id="update_button"><i class="fa fa-check"></i> Güncelle</button>
+                                <button type="button" class="btn default" id="delete_button">Sil</button>
                             </div>
                         </div>
                     </div>
