--- a/static/metronic/views/datatables/ajax.html
+++ b/static/metronic/views/datatables/ajax.html
@@ -215,6 +215,6 @@
 <!-- END MAIN CONTENT -->
 <!-- BEGIN MAIN JS -->
 <script>
-	TableAjax.init();
+	CategoryTable.init();
 </script>
 <!-- END MAIN JS -->
