--- a/templates/aero_admin_app.html
+++ b/templates/aero_admin_app.html
@@ -20,7 +20,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
-    <title data-ng-bind="'Metronic AngularJS | ' + $state.current.data.pageTitle"></title>
+    <title data-ng-bind="'IHA Kiralama | ' + $state.current.data.pageTitle"></title>
 
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
