--- a/templates/aero_lease_app.html
+++ b/templates/aero_lease_app.html
@@ -161,13 +161,32 @@ License: You must have a valid license purchased only from themeforest(the above
 <script src="{% static 'metronic/global/scripts/metronic.js' %}" type="text/javascript"></script>
 <script src="{% static 'metronic/admin/layout2/scripts/layout.js' %}" type="text/javascript"></script>
 <script src="{% static 'metronic/admin/layout2/scripts/demo.js' %}" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- END APP LEVEL JQUERY SCRIPTS -->
 
 <script type="text/javascript">
     /* Init Metronic's core jquery plugins and layout scripts */
     $(document).ready(function () {
         Metronic.init(); // Run metronic theme
-        Metronic.setAssetsPath('{% static metronic / ' %}'); // Set the assets folder path
+        Metronic.setAssetsPath('{% static metronic / ' %}');});
+
+    function showSweetAlert() {
+        Swal.fire({
+            title: "Kiralama Sistemi Uyarısı",
+            html: "Kiralama sisteminin henüz sonuna gelemedim. AeroAdmin üzerinden kiralama yapılabilir. Burası için özel yetkiler ile herkesin kendi kiralama talebini oluşturabileceği, eski kiralamaları görebileceği ve kira iptal isteği gönderebileceği bir panel düşünmüştüm.",
+            confirmButtonText: "Tamam",
+            allowOutsideClick: true,
+            showCloseButton: true,
+            allowEscapeKey: true,
+            willClose: () => {
+                showSweetAlert();
+            }
+        });
+    }
+
+    // Sayfa yüklendiğinde SweetAlert döngüsünü başlat
+    document.addEventListener('DOMContentLoaded', function () {
+        showSweetAlert();
     });
 </script>
 <!-- END JAVASCRIPTS -->
